# graphics

./: .build.bat  CMakeLists.txt  Graphics.sln  OpenGL.sln
1.1-Example/: 1.1-Example.vcxproj
1.1-Example/Sources/: Main.cpp
1.2-Example/: 1.2-Example.vcxproj
1.2-Example/Sources/: Main.cpp  SimpleTriangle.cpp  SimpleTriangle.h
1.2.3-SimpleEBO/: 1.2.3-SimpleEBO.vcxproj  1.2.3-SimpleEBO.vcxproj.filters
1.2.3-SimpleEBO/Sources/: Main.cpp  VAORectangle.cpp  VAORectangle.h
1.2.4-SimpleUniformAnimation/: 1.2.4-SimpleUniformAnimation.vcxproj  1.2.4-SimpleUniformAnimation.vcxproj.filters
1.2.4-SimpleUniformAnimation/Sources/: Main.cpp  VAORectangle.cpp  VAORectangle.h
1.2.5-SimpleFragmentInterpolation/: 1.2.5-SimpleFragmentInterpolation.vcxproj
1.2.5-SimpleFragmentInterpolation/Sources/: Main.cpp  VAOTriangle.cpp  VAOTriangle.h
OpenGL/: OpenGL.vcxproj
OpenGL-1.1-SetupGLFW/: OpenGL-1.1-SetupGLFW.filters  OpenGL-1.1-SetupGLFW.vcxproj
OpenGL-1.1-SetupGLFW/Sources/: Main.cpp
OpenGL-1.2.1-SimpleTriangle/: OpenGL-1.2.1-SimpleTriangle.filters  OpenGL-1.2.1-SimpleTriangle.vcxproj
OpenGL-1.2.1-SimpleTriangle/Sources/: Main.cpp  SimpleTriangle.cpp
OpenGL-1.2.2-SimpleVAOTriangle/: OpenGL-1.2.2-SimpleVAOTriangle.filters  OpenGL-1.2.2-SimpleVAOTriangle.vcxproj
OpenGL-1.2.2-SimpleVAOTriangle/Sources/: Main.cpp  VAOTriangle.h
OpenGL-1.2.3-SimpleEBORectangle/: OpenGL-1.2.3-SimpleEBORectangle.vcxproj
OpenGL-1.2.3-SimpleEBORectangle/Sources/: VAORectangle.cpp
OpenGL-1.2.4-SimpleUniformAnimation/: 1.2.4-SimpleUniformAnimation.vcxproj
OpenGL-1.2.4-SimpleUniformAnimation/Sources/: VAORectangle.cpp
OpenGL-1.2.5-SimpleFragmentInterpolation/: OpenGL-1.2.5-SimpleFragmentInterpolation.vcxproj
OpenGLAbstractionLayerLibrary/: OpenGLAbstractionLayerLibrary.vcxproj  OpenGLAbstractionLayerLibrary.vcxproj.filters
OpenGLAbstractionLayerLibrary/Include/: File.h  FragmentShader.h  Image.h  Position.h  Shader.h  ShaderProgram.h  Vertex.h  VertexBufferObject.h  VertexShader.h
OpenGLAbstractionLayerLibrary/Sources/: File.cpp  FragmentShader.cpp  Image.cpp  Shader.cpp  ShaderProgram.cpp  VertexBufferObject.cpp  (+1 more)
SimpleVAOTriangle/: SimpleVAOTriangle.vcxproj  SimpleVAOTriangle.vcxproj.filters
projects/: CMakeLists.txt
projects/opengl/: CMakeLists.txt
projects/opengl/1.1-setup-glfw/: CMakeLists.txt
projects/opengl/1.1-setup-glfw/src/: Main.cpp
projects/opengl/1.2.1-simple-triangle/: CMakeLists.txt
projects/opengl/1.2.2-simple-vao-triangle/: CMakeLists.txt
projects/opengl/1.2.2-simple-vao-triangle/src/: VAOTriangle.cpp
projects/opengl/1.2.3-simple-ebo-rectangle/: CMakeLists.txt
projects/opengl/1.2.3-simple-ebo-rectangle/src/: Main.cpp  VAORectangle.h
projects/opengl/1.2.4-simple-uniform-animation/: CMakeLists.txt
projects/opengl/1.2.4-simple-uniform-animation/src/: Main.cpp  VAORectangle.h
projects/opengl/1.2.5-simple-fragment-interpolation/: CMakeLists.txt
projects/opengl/1.2.5-simple-fragment-interpolation/src/: Main.cpp  VAOTriangle.cpp
projects/opengl/opengl-abstraction-level/: CMakeLists.txt
projects/opengl/opengl-abstraction-level/src/: Color.h  File.cpp  File.h  FragmentShader.cpp  FragmentShader.h  Image.cpp  Image.h  Position.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Vertex.h  VertexBufferObject.cpp  VertexBufferObject.h  VertexShader.cpp  VertexShader.h
(+11 files in other folders)
